Moved secret business logic into java code (optionally)