@@ -2,4 +2,30 @@
 
 umask 0002
 
-java -Xmx256M -XX:MaxPermSize=256M -Djava.security.policy=/etc/cyc-security.policy -Dcyc.home=/usr/local/cyc-engine-container -Dcyc.properties=/etc/cyc.properties  -jar /usr/local/cyc-engine-container/engine-container-jar-with-dependencies.jar
+if type -p java 1>/dev/null; then
+    #echo found java executable in PATH
+    _java=java
+elif [[ -n "$JAVA_HOME" ]] && [[ -x "$JAVA_HOME/bin/java" ]];  then
+    #echo found java executable in JAVA_HOME     
+    _java="$JAVA_HOME/bin/java"
+else
+    echo "no java"
+fi
+
+if [[ "$_java" ]]; then
+    version=$("$_java" -version 2>&1 | awk -F '"' '/version/ {print $2}')
+    #echo version "$version"
+    if [[ "$version" > "1.8" ]]; then
+    	OPTS="$OPTS"
+        #echo version is more than 1.8
+    else         
+    	OPTS="$OPTS -XX:MaxPermSize=256M"
+        #echo version is less than 1.8
+    fi
+fi
+
+if [ -e "/etc/cyc.properties" ]; then
+	OPTS="$OPTS -Dcyc.properties=/etc/cyc.properties"
+fi
+
+$_java -Xmx512M $OPTS -XX:+UseConcMarkSweepGC -Djava.security.policy=/usr/local/cyc-engine-container/security.policy -Dcyc.home=/usr/local/cyc-engine-container -jar /usr/local/cyc-engine-container/engine-container-jar-with-dependencies.jar
